[package]
name = "time-to-break"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = { version = "4.11.3", default-features = false }
windows = { version = "0.56.0", features = ["Win32_System_Com", "Win32_UI_Shell"] }
